--- a/research/data_ingestion.ipynb
+++ b/research/data_ingestion.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,37 +148,25 @@
     "        else:\n",
     "            logger.info(f\" file already exist of size: {get_size(Path(self.config.local_data_file))}\")\n",
     "\n",
-    "    def extract_zip_file(zip_file_path, extract_to):\n",
-    "        with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:zip_ref.extractall(extract_to)\n",
-    "        print(f\"Extracted {zip_file_path} to {extract_to}\")"
+    "    def extract_zip_file(self):\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:zip_ref.extractall(unzip_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-05 14:36:46,939: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-09-05 14:36:46,941: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-05 14:36:46,944: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-05 14:36:46,946: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-09-05 14:36:46,948: INFO: 160132191:  file already exist of size: ~ 11345 KB]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "extract_zip_file() missing 1 required positional argument: 'extract_to'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[21], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      5\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n\u001b[1;32m----> 6\u001b[0m     \u001b[43mdata_ingestion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract_zip_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "\u001b[1;31mTypeError\u001b[0m: extract_zip_file() missing 1 required positional argument: 'extract_to'"
+      "[2024-09-05 14:44:05,096: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-09-05 14:44:05,099: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-05 14:44:05,103: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-05 14:44:05,105: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-09-05 14:44:05,107: INFO: 3319989704:  file already exist of size: ~ 11345 KB]\n"
      ]
     }
    ],
@@ -191,27 +179,6 @@
     "    data_ingestion.extract_zip_file()\n",
     "except Exception as e:\n",
     "    raise e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-09-05 14:20:07,715: INFO: common: yaml file: D:\\MLOps_DVC\\config\\config.yaml loaded successfully]\n",
-      "{'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_url': 'https://github.com/entbappy/Branching-tutorial/raw/master/Chicken-fecal-images.zip', 'local_data_files': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from src.CnnClassifier.utils.common import read_yaml\n",
-    "\n",
-    "config = read_yaml(Path('D:\\MLOps_DVC\\config\\config.yaml'))  # Specify your file\n",
-    "print(config)  # Check if 'local_data_file' is listed\n"
    ]
   },
   {
