--- a/research/04_training.ipynb
+++ b/research/04_training.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,13 +137,17 @@
     "\n",
     "\n",
     "    def get_training_config(self) -> TrainingConfig:\n",
+    "    # Check if 'training' exists in the configuration\n",
+    "        if 'training' not in self.config:\n",
+    "            raise KeyError(\"'training' configuration is missing!\")\n",
+    "        \n",
     "        training = self.config.training\n",
     "        prepare_base_model = self.config.prepare_base_model\n",
     "        params = self.params\n",
+    "\n",
+    "        # Ensure the data ingestion path exists and is correct\n",
     "        training_data = os.path.join(self.config.data_ingestion.unzip_dir, \"Chicken-fecal-images\")\n",
-    "        create_directories([\n",
-    "            Path(training.root_dir)\n",
-    "        ])\n",
+    "        create_directories([Path(training.root_dir)])\n",
     "\n",
     "        training_config = TrainingConfig(\n",
     "            root_dir=Path(training.root_dir),\n",
@@ -156,12 +160,12 @@
     "            params_image_size=params.IMAGE_SIZE\n",
     "        )\n",
     "\n",
-    "        return training_config"
+    "        return training_config\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,53 +308,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "BoxKeyError",
-     "evalue": "\"'ConfigBox' object has no attribute 'training'\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'training'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'training'\"",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'training'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\config_box.py:28\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'training'\"",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'training'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'training'\"",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'training'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 16\u001b[0m\n\u001b[0;32m     11\u001b[0m     training\u001b[38;5;241m.\u001b[39mtrain(\n\u001b[0;32m     12\u001b[0m         callback_list\u001b[38;5;241m=\u001b[39mcallback_list\n\u001b[0;32m     13\u001b[0m     )\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[23], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m prepare_callbacks \u001b[38;5;241m=\u001b[39m PrepareCallback(config\u001b[38;5;241m=\u001b[39mprepare_callbacks_config)\n\u001b[0;32m      5\u001b[0m callback_list \u001b[38;5;241m=\u001b[39m prepare_callbacks\u001b[38;5;241m.\u001b[39mget_tb_ckpt_callbacks()\n\u001b[1;32m----> 7\u001b[0m training_config \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_training_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m training \u001b[38;5;241m=\u001b[39m Training(config\u001b[38;5;241m=\u001b[39mtraining_config)\n\u001b[0;32m      9\u001b[0m training\u001b[38;5;241m.\u001b[39mget_base_model()\n",
-      "Cell \u001b[1;32mIn[14], line 33\u001b[0m, in \u001b[0;36mConfigurationManager.get_training_config\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_training_config\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m TrainingConfig:\n\u001b[1;32m---> 33\u001b[0m     training \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtraining\u001b[49m\n\u001b[0;32m     34\u001b[0m     prepare_base_model \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mprepare_base_model\n\u001b[0;32m     35\u001b[0m     params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\n",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\config_box.py:30\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'training'\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 78 images belonging to 2 classes.\n",
+      "Found 312 images belonging to 2 classes.\n",
+      "19/19 [==============================] - ETA: 0s - loss: 11.2291 - accuracy: 0.5439"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19/19 [==============================] - 94s 5s/step - loss: 11.2291 - accuracy: 0.5439 - val_loss: 16.4382 - val_accuracy: 0.6094\n"
      ]
     }
    ],
