--- a/MLOps_DVC/research/04_training.ipynb
+++ b/MLOps_DVC/research/04_training.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Chicken-Disease-Classification--Project\\\\research'"
+       "'d:\\\\MLOps_DVC\\\\MLops_DVC\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Chicken-Disease-Classification--Project'"
+       "'d:\\\\MLOps_DVC\\\\MLops_DVC'"
       ]
      },
      "execution_count": 4,
@@ -90,18 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cnnClassifier.constants import *\n",
-    "from cnnClassifier.utils.common import read_yaml, create_directories\n",
+    "from src.CnnClassifier.constants import *\n",
+    "from src.CnnClassifier.utils.common import read_yaml, create_directories\n",
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,8 @@
     "        self, \n",
     "        config_filepath = CONFIG_FILE_PATH,\n",
     "        params_filepath = PARAMS_FILE_PATH):\n",
-    "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(params_filepath)\n",
+    "        self.config = read_yaml(str(config_filepath))\n",
+    "        self.params = read_yaml(str(params_filepath))\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
     "\n",
@@ -137,13 +137,17 @@
     "\n",
     "\n",
     "    def get_training_config(self) -> TrainingConfig:\n",
+    "    # Check if 'training' exists in the configuration\n",
+    "        if 'training' not in self.config:\n",
+    "            raise KeyError(\"'training' configuration is missing!\")\n",
+    "        \n",
     "        training = self.config.training\n",
     "        prepare_base_model = self.config.prepare_base_model\n",
     "        params = self.params\n",
+    "\n",
+    "        # Ensure the data ingestion path exists and is correct\n",
     "        training_data = os.path.join(self.config.data_ingestion.unzip_dir, \"Chicken-fecal-images\")\n",
-    "        create_directories([\n",
-    "            Path(training.root_dir)\n",
-    "        ])\n",
+    "        create_directories([Path(training.root_dir)])\n",
     "\n",
     "        training_config = TrainingConfig(\n",
     "            root_dir=Path(training.root_dir),\n",
@@ -156,12 +160,12 @@
     "            params_image_size=params.IMAGE_SIZE\n",
     "        )\n",
     "\n",
-    "        return training_config"
+    "        return training_config\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +197,7 @@
     "    @property\n",
     "    def _create_ckpt_callbacks(self):\n",
     "        return tf.keras.callbacks.ModelCheckpoint(\n",
-    "            filepath=self.config.checkpoint_model_filepath,\n",
+    "            filepath=str(self.config.checkpoint_model_filepath),\n",
     "            save_best_only=True\n",
     "        )\n",
     "\n",
@@ -207,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,22 +308,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-01 10:18:59,787: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-06-01 10:18:59,792: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-06-01 10:18:59,794: INFO: common: created directory at: artifacts]\n",
-      "[2023-06-01 10:18:59,795: INFO: common: created directory at: artifacts\\prepare_callbacks\\checkpoint_dir]\n",
-      "[2023-06-01 10:18:59,796: INFO: common: created directory at: artifacts\\prepare_callbacks\\tensorboard_log_dir]\n",
-      "[2023-06-01 10:18:59,797: INFO: common: created directory at: artifacts\\training]\n",
       "Found 78 images belonging to 2 classes.\n",
       "Found 312 images belonging to 2 classes.\n",
-      "19/19 [==============================] - 28s 1s/step - loss: 13.6681 - accuracy: 0.5270 - val_loss: 19.1089 - val_accuracy: 0.3906\n"
+      "19/19 [==============================] - ETA: 0s - loss: 11.2291 - accuracy: 0.5439"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pavan\\anaconda3\\envs\\myenv\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19/19 [==============================] - 94s 5s/step - loss: 11.2291 - accuracy: 0.5439 - val_loss: 16.4382 - val_accuracy: 0.6094\n"
      ]
     }
    ],
@@ -348,6 +361,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -366,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.19"
   },
   "orig_nbformat": 4
  },
